# InsurAI-Policy-Intelligence-System

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
PPT/: InsurAI.pptx  (+1 more)
backend/: .env.example  pyproject.toml  run.sh
backend/app/: database.py  main.py  models.py
backend/app/audit/: __init__.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  models.py  router.py  schemas.py  service.py  session.py
backend/app/claims/: __init__.py  router.py  schemas.py  service.py
backend/app/compliance/: __init__.py  router.py  schemas.py  service.py
backend/app/core/: config.py  llm_provider.py
backend/app/errors/: __init__.py  router.py  schemas.py  service.py
backend/app/fraud/: __init__.py  router.py  schemas.py  service.py
backend/app/health/: router.py  schemas.py  service.py
backend/app/ingestion/: router.py  schemas.py
backend/app/metrics/: __init__.py  router.py  schemas.py  service.py  timing.py
backend/app/middleware/: __init__.py  activity_logger.py  error_monitor.py
backend/app/notifications/: router.py  schemas.py  service.py
backend/app/processing/: chunker.py  embedder.py  vector_store.py
backend/app/rag/: reranker.py  retrieve_router.py  retriever.py  router.py  schemas.py  stream_router.py  synthesizer.py
backend/app/reports/: __init__.py  router.py  schemas.py  service.py
backend/scripts/: seed_claims.py  seed_users.py
backend/tests/: __init__.py  conftest.py  test_document_ingestion.py  test_domain_apis.py  test_health.py  test_monitoring_apis.py  test_rag.py  test_workspaces.py
(+119 files in other folders)
