[tool.poetry]
name = "insurai-backend"
version = "0.1.0"
description = "InsurAI Corporate Policy Intelligence – FastAPI Backend"
authors = ["InsurAI Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
minio = "^7.2.7"
python-multipart = "^0.0.9"      # Required for FastAPI UploadFile
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
redis = "^5.0.4"
celery = { extras = ["redis"], version = "^5.4.0" }
pymupdf = "^1.24.0"           # PDF text extraction (fitz) for ingestion worker
python-docx = "^1.1.0"       # DOCX text extraction for ingestion worker
litellm = "^1.40.0"          # Unified LLM/embedding provider interface (Phase P4+)
pymilvus = "^2.4.0"          # Milvus vector database client (Phase P4 – T6)
rank-bm25 = "^0.2.2"        # BM25 lexical re-ranker for hybrid retrieval (Phase P5 – T7)

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"      # For async test client
ruff = "^0.4.7"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
